--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.468.0",
     "next": "15.1.0",
+    "nodemailer": "^6.9.16",
     "react": "^19.0.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
